--- a/.gitconfig
+++ b/.gitconfig
@@ -7,5 +7,10 @@
         email= adam@riseup.co.il
 [merge]
 	conflictStyle = diff3
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
 [alias]
 	pm = fetch origin master:master
